fixed overlapping navbar

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,15 +2,10 @@
   background-color: black;
   color: white;
   width: 100%;
-  max-width: 1376px;
 }
 
 header {
   display: flex;
-  padding: 0px;
-  padding-left: 5rem;
-  padding-right: 5rem;
-  margin: 0px;
 }
 
 ul {
